<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>dev.knightcore</groupId>
	<artifactId>ProEventIQ</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ProEventIQ</name>
	<description>Event managment tool</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
		<springdoc.version>2.3.0</springdoc.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc.version}</version>
        </dependency>
		<dependency>
            <groupId>org.openapitools</groupId>
            <artifactId>jackson-databind-nullable</artifactId>
            <version>0.2.6</version>
        </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
                <version>6.6.0</version>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<configHelp>false</configHelp>
							<inputSpec>
								${project.basedir}/../api/proeventiq.yaml
							</inputSpec>
							<generatorName>spring</generatorName>
							<apiPackage>dev.knightcore.proeventiq.api.controller</apiPackage>
							<invokerPackage>dev.knightcore.proeventiq.api.controller</invokerPackage>
							<modelPackage>dev.knightcore.proeventiq.api.model</modelPackage>
							<generateAliasAsModel>true</generateAliasAsModel>
							<enablePostProcessFile>true</enablePostProcessFile>
							<output>${project.basedir}</output>
							<artifactId> proeventiq-api </artifactId>
							<skipIfSpecIsUnchanged>true</skipIfSpecIsUnchanged>
							<configOptions>
								<library>spring-boot</library>
								<oas3>true</oas3>
								<useSpringController>true</useSpringController>
								<useSpringfox>false</useSpringfox>
								<skipDefaultInterface>true</skipDefaultInterface>
								<interfaceOnly>true</interfaceOnly>
								<useSpringBoot3>true</useSpringBoot3>
								<annotationLibrary>swagger2</annotationLibrary>
								<dateLibrary>java8</dateLibrary>
								<implicitHeaders>true</implicitHeaders>
								<singleContentTypes>false</singleContentTypes>
								<useBeanValidation>true</useBeanValidation>
								<useJakartaEe>true</useJakartaEe>
							</configOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
